--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -21,18 +21,30 @@
     "1. Python\n",
     "2. R\n",
     "3. SQL\n",
-    "4. Java\n",
-    "5. Julia\n",
+    "4. Scala\n",
+    "5. Java\n",
+    "6. C++\n",
+    "7. Julia\n",
+    "8. JavaScript\n",
+    "9. PHP\n",
+    "10. Go\n",
+    "11. Ruby\n",
+    "12. Visual Basic\n",
     "\n",
     "## Data Science Libraries\n",
     "\n",
     "Some of the commonly used libraries by Data Scientists include:\n",
     "\n",
-    "1. **NumPy**: A powerful library for numerical computing in Python, providing support for arrays, matrices, and high-level mathematical functions.\n",
-    "2. **Pandas**: A versatile data manipulation and analysis library that provides data structures like DataFrames for handling structured data.\n",
-    "3. **Matplotlib**: A comprehensive library for creating static, animated, and interactive visualizations in Python.\n",
-    "4. **Scikit-learn**: A machine learning library in Python that provides simple and efficient tools for data mining and data analysis.\n",
-    "5. **TensorFlow**: An open-source library developed by Google for numerical computation and machine learning, particularly deep learning models.\n",
+    "1. Numpy\n",
+    "2. Pandas\n",
+    "3. Matplotlib\n",
+    "4. Seaborn\n",
+    "5. Scikit-learn\n",
+    "6. Keras\n",
+    "7. Tansorflow\n",
+    "8. Pytorch\n",
+    "9. Vegas\n",
+    "10. BigDL\n",
     "\n",
     "## Data Science Tools\n",
     "\n",
@@ -42,7 +54,9 @@
     "|--------------------------|\n",
     "| Jupyter Notebook         |\n",
     "| RStudio                  |\n",
-    "| Apache Zeppelin          |\n",
+    "| Zeppelin                 |\n",
+    "| Spyder                   |\n",
+    "| Anaconda                 |\n",
     "\n",
     "\n",
     "### Arithmetic Expression Examples\n",
@@ -76,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -84,36 +98,18 @@
     {
      "data": {
       "text/plain": [
-       "3.3333333333333335"
+       "3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This will convert 200 minutes to hours by dividing by 60\n",
-    "minutes = 200\n",
-    "hours = minutes / 60\n",
-    "hours\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Objectives:**\n",
+    "#This will convert 200 minutes to hours by dividing by 60\n",
     "\n",
-    "- List popular languages for Data Science\n",
-    "- Identify commonly used data science libraries\n",
-    "- Explore various data science tools\n",
-    "- Evaluate arithmetic expressions in Python\n",
-    "- Perform unit conversions between minutes and hours\n",
-    "\n",
-    "\n",
-    "## Author\n",
-    "### Tapish Sharma"
+    "200//60\n"
    ]
   },
   {
@@ -122,6 +118,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "\n",
+    "- List popular languages for Data Science.\n",
+    "- Explain the difference between supervised and unsupervised learning.\n",
+    "- Demonstrate the use of pandas for data manipulation.\n",
+    "- Visualize data using matplotlib.\n",
+    "\n",
+    "## Author\n",
+    "Tapish Sharma\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
